v0.3.0/_sources/projections/misc/misc_eckertIV.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_eckertIV.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_misc_misc_eckertIV.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_eckertIV.py:


Eckert IV
=========

The Eckert IV projection, presented by the German cartographer Max
Eckert-Greiffendorff in 1906, is a pseudo-cylindrical equal-area projection. Central
meridian and all parallels are straight lines; other meridians are equally spaced
elliptical arcs. The scale is true along latitude 40°30’.

**kf**\ [*lon0/*]\ *scale* or **Kf**\ [*lon0/*]\ *width*

The projection is set with **kf** or **Kf**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 15-21



.. image:: /projections/misc/images/sphx_glr_misc_eckertIV_001.png
    :alt: misc eckertIV
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="Kf12c", land="ivory", water="bisque4", frame="afg")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.219 seconds)


.. _sphx_glr_download_projections_misc_misc_eckertIV.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: misc_eckertIV.py <misc_eckertIV.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: misc_eckertIV.ipynb <misc_eckertIV.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
